--- a/s1-125.html
+++ b/s1-125.html
@@ -74,6 +74,7 @@
               <label for="a_sin_x"> <input data-state="stateA" data-function="sin"  name="sA_f" id="a_sin_x" type="radio" />Sin(x) </label><br />
               <label for="a_cos_x"> <input data-state="stateA" data-function="cos"  name="sA_f" id="a_cos_x" type="radio" />Cos(x) </label><br />
               <label for="a_rec_x"> <input data-state="stateA" data-function="rect" name="sA_f" id="a_rec_x" type="radio" />Прямоугольный импульс</label>
+              <label for="a_saw_x"> <input data-state="stateA" data-function="saw"  name="sA_f" id="a_saw_x" type="radio" />Пилообразный импульс</label>
             </div>
 
             <div style="margin-top: 15px;" class="signal_state">
@@ -93,6 +94,7 @@
               <label for="b_sin_x"><input data-state="stateB" data-function="sin"  name="sB_f" id="b_sin_x" type="radio" />Sin(x) </label><br />
               <label for="b_cos_x"><input data-state="stateB" data-function="cos"  name="sB_f" id="b_cos_x" type="radio" />Cos(x) </label><br />
               <label for="b_rec_x"><input data-state="stateB" data-function="rect" name="sB_f" id="b_rec_x" type="radio" />Прямоугольный импульс</label>
+              <label for="b_saw_x"><input data-state="stateB" data-function="saw"  name="sB_f" id="b_saw_x" type="radio" />Пилообразный импульс</label>
             </div>
 
             <div style="margin-top: 15px;" class="signal_state">
